:bug: fixed that navbar has higher z-index

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -53,10 +53,10 @@ a {
   width: 100vw;
 
   @media screen and (min-width: 768px) and (max-width: 1023px) {
-    background-image: url("/home/background-crew-tablet.jpg");
+    background-image: url("/crew/background-crew-tablet.jpg");
   }
   @media screen and (max-width: 767px) {
-    background-image: url("/home/background-crew-mobile.jpg");
+    background-image: url("/crew/background-crew-mobile.jpg");
   }
 }
 
